--- a/index.html
+++ b/index.html
@@ -219,31 +219,31 @@
       border-radius: 3px;
     }
 
-    /* Блок подарков — уменьшен в 2 раза */
+    /* Блок подарков — 1.5 × от уменьшенного */
     .gifts-container {
       position: fixed;
       bottom: 20px;
       right: 20px;
       width: 70%;
       max-width: 400px;
-      height: 110px; /* ← в 2 раза меньше */
+      height: 165px; /* 110px * 1.5 */
       background: rgba(255, 255, 255, 0.94);
       border-radius: 12px;
-      padding: 10px; /* ← меньше отступы */
+      padding: 12px;
       box-shadow: 0 6px 20px rgba(0,0,0,0.3);
       z-index: 10;
       backdrop-filter: blur(5px);
       border: 1px solid rgba(231, 76, 60, 0.2);
       display: flex;
       flex-direction: column;
-      font-size: 0.9em; /* ← чуть мельче текст */
+      font-size: 0.95em;
     }
 
     .gifts-title {
       font-weight: bold;
       color: var(--main);
-      margin-bottom: 6px;
-      font-size: 1em;
+      margin-bottom: 8px;
+      font-size: 1.05em;
       display: flex;
       justify-content: space-between;
     }
@@ -255,7 +255,7 @@
     }
 
     .gift-item {
-      padding: 6px 0;
+      padding: 8px 0;
       border-bottom: 1px solid #eee;
     }
 
@@ -266,12 +266,12 @@
     .gift-from {
       font-weight: bold;
       color: #2c3e50;
-      font-size: 0.95em;
+      font-size: 1em;
     }
 
     .gift-message {
-      margin-top: 3px;
-      font-size: 0.9em;
+      margin-top: 4px;
+      font-size: 0.95em;
       color: #444;
       line-height: 1.3;
     }
@@ -280,8 +280,8 @@
       color: #888;
       font-style: italic;
       text-align: center;
-      font-size: 0.85em;
-      padding-top: 15px;
+      font-size: 0.9em;
+      padding-top: 20px;
     }
 
     .gifts-list::-webkit-scrollbar {
@@ -296,18 +296,18 @@
       border-radius: 3px;
     }
 
-    /* Кнопка — только текст, без коробки */
     .create-your-link {
       background: #3498db;
       color: white;
-      padding: 6px 12px;
-      border-radius: 6px;
+      padding: 8px 16px;
+      border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 15px;
       display: inline-block;
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      box-shadow: 0 3px 8px rgba(0,0,0,0.25);
+      margin-top: 6px;
     }
 
     @media (max-width: 600px) {
@@ -316,7 +316,7 @@
         right: 10px;
         left: 10px;
         width: calc(100% - 20px);
-        height: 100px;
+        height: 150px;
       }
       .lang-switcher {
         top: 10px;
@@ -438,7 +438,7 @@
 
   function createSnowflakes() {
     const snowContainer = document.getElementById('snowflakes');
-    const snowflakeCount = 360; // ← 360+ снежинок
+    const snowflakeCount = 360;
     for (let i = 0; i < snowflakeCount; i++) {
       const snowflake = document.createElement('div');
       snowflake.classList.add('snowflake');
@@ -446,7 +446,7 @@
       snowflake.style.width = `${size}px`;
       snowflake.style.height = `${size}px`;
       snowflake.style.left = `${Math.random() * 100}vw`;
-      const duration = Math.random() * 3 + 2; // ← быстрее
+      const duration = Math.random() * 3 + 2;
       const delay = Math.random() * 5;
       const drift = (Math.random() - 0.5) * 150;
       snowflake.style.setProperty('--drift', `${drift}px`);
@@ -494,7 +494,6 @@
       <div class="form-group">
         <input id="ownerName" placeholder="${t('placeholderName')}" />
       </div>
-      <!-- Поле "Ссылка для перевода" УДАЛЕНО -->
       <button class="create-sock-btn" onclick="createSock()">${t('createBtn')}</button>
     `;
   }
@@ -502,7 +501,6 @@
   async function createSock() {
     const sockId = document.getElementById('sockId').value.trim();
     const ownerName = document.getElementById('ownerName').value.trim();
-    // paymentLink удалён
     
     if (!sockId || !ownerName) { 
       alert(t('alertFill')); 
@@ -519,7 +517,7 @@
         id: sockId,
         owner_name: ownerName,
         allow_text: true,
-        payment_link: null // удалено
+        payment_link: null
       }]);
 
     if (error) { 
@@ -581,16 +579,12 @@
       <div id="submitBtnContainer"></div>
     `;
 
-    // Платёжная кнопка удалена
-
     document.getElementById('app').innerHTML = html;
     initEmojiPanel();
 
-    // Удаляем старую кнопку
     let createBtn = document.getElementById('createYourBtn');
     if (createBtn) createBtn.remove();
 
-    // Создаём контейнер: коробка + кнопка
     const container = document.createElement('div');
     container.id = 'createYourBtn';
     container.style.cssText = `
@@ -603,32 +597,36 @@
       z-index: 10;
     `;
 
-    // Подарочная коробка
+    // Подарочная коробка — 2× больше + бант
     const box = document.createElement('div');
     box.innerHTML = `
-      <svg width="50" height="40" viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
-        <rect x="10" y="20" width="80" height="50" rx="5" fill="#e74c3c" stroke="#c0392b" stroke-width="2"/>
-        <rect x="5" y="10" width="90" height="15" rx="3" fill="#e74c3c" stroke="#c0392b" stroke-width="2"/>
-        <rect x="47" y="5" width="6" height="70" fill="#f1c40f"/>
-        <rect x="20" y="42" width="60" height="6" fill="#f1c40f"/>
-        <circle cx="50" cy="45" r="5" fill="#f1c40f"/>
+      <svg width="100" height="80" viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg">
+        <!-- Коробка -->
+        <rect x="10" y="20" width="80" height="50" rx="6" fill="#e74c3c" stroke="#c0392b" stroke-width="2.5"/>
+        <!-- Крышка -->
+        <rect x="5" y="10" width="90" height="15" rx="4" fill="#e74c3c" stroke="#c0392b" stroke-width="2.5"/>
+        <!-- Лента вертикальная -->
+        <rect x="47" y="5" width="6" height="70" fill="#f1c40f" rx="3"/>
+        <!-- Лента горизонтальная -->
+        <rect x="20" y="42" width="60" height="6" fill="#f1c40f" rx="3"/>
+        <!-- Бант -->
+        <circle cx="50" cy="45" r="6" fill="#f1c40f"/>
+        <path d="M42,35 Q50,25 58,35 Q50,30 42,35" fill="#f1c40f"/>
+        <path d="M42,55 Q50,65 58,55 Q50,60 42,55" fill="#f1c40f"/>
       </svg>
     `;
-    box.style.marginBottom = '8px';
+    box.style.marginBottom = '10px';
 
-    // Кнопка
     const btn = document.createElement('a');
     btn.href = '/';
     btn.className = 'create-your-link';
     btn.textContent = t('createYourSockBtn');
-    btn.style.width = '100%';
-    btn.style.textAlign = 'center';
+    btn.style.width = '120px';
 
     container.appendChild(box);
     container.appendChild(btn);
     document.body.appendChild(container);
 
-    // Блок подарков
     let giftsContainer = document.getElementById('giftsCorner');
     if (giftsContainer) giftsContainer.remove();
     giftsContainer = document.createElement('div');
