--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
     // Изображение (можно заменить URL)
     const img = document.createElement('img');
-    img.src = 'https://pixabay.com/vectors/gift-present-box-bow-ribbon-5691042;
+    img.src = 'https://media.giphy.com/media/3o7TKua8n92lXQ8O0c/giphy.gif';
     img.alt = 'Подарок';
     img.style.width = '60px';
     img.style.height = '60px';
@@ -802,4 +802,5 @@
 
 </body>
 </html>
+
 
