--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
     // Изображение (можно заменить URL)
     const img = document.createElement('img');
-    img.src = 'https://media.giphy.com/media/3o7TKua8n92lXQ8O0c/giphy.gif';
+    img.src = './public/present.gif';
     img.alt = 'Подарок';
     img.style.width = '60px';
     img.style.height = '60px';
@@ -802,5 +802,6 @@
 
 </body>
 </html>
+
 
 
