--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
 
     // Изображение (можно заменить URL)
     const img = document.createElement('img');
-    img.src = './public/present.gif';
+    img.src = './present.gif';
     img.alt = 'Подарок';
     img.style.width = '60px';
     img.style.height = '60px';
@@ -802,6 +802,7 @@
 
 </body>
 </html>
+
 
 
 
