--- a/index.html
+++ b/index.html
@@ -495,6 +495,14 @@
         <input id="ownerName" placeholder="${t('placeholderName')}" />
       </div>
       <button class="create-sock-btn" onclick="createSock()">${t('createBtn')}</button>
+<div style="text-align: center; margin-top: 30px;">
+  <a href="https://xmas-sock.vercel.app/" target="_blank">
+    <img src="./create-sock-banner.gif" 
+         alt="Создай свой рождественский носок!" 
+         style="max-width: 80%; height: auto; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
+  </a>
+  <p style="margin-top: 10px; font-size: 16px; color: #fff;">Поделись этим баннером с друзьями!</p>
+</div>
     `;
   }
 
@@ -776,3 +784,4 @@
 
 </body>
 </html>
+
